RESOLVED FIXED159799
CrashTracer: com.apple.WebKit.WebContent at WebCore: WebCore::MediaQueryEvaluator::evaluate const
https://bugs.webkit.org/show_bug.cgi?id=159799
Summary CrashTracer: com.apple.WebKit.WebContent at WebCore: WebCore::MediaQueryEvalu...
Dean Jackson
Reported 2016-07-14 19:25:48 PDT
CrashTracer: com.apple.WebKit.WebContent at WebCore: WebCore::MediaQueryEvaluator::evaluate const
Attachments
Patch (2.02 KB, patch)
2016-07-14 19:30 PDT, Dean Jackson
mmaxfield: review+
Dean Jackson
Comment 1 2016-07-14 19:26:28 PDT
Dean Jackson
Comment 2 2016-07-14 19:30:07 PDT
Dean Jackson
Comment 3 2016-07-14 19:32:37 PDT
Note You need to log in before you can comment on or make changes to this bug.